--- a/MovieMate/MovieMate/Views/Base.lproj/LaunchScreen.storyboard
+++ b/MovieMate/MovieMate/Views/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,33 +17,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="логотип" translatesAutoresizingMaskIntoConstraints="NO" id="TMZ-MR-vPS">
-                                <rect key="frame" x="30" y="159" width="333" height="559"/>
-                                <color key="backgroundColor" red="0.0" green="0.003718701657" blue="0.016216378659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="21.666666666666657" y="263.66666666666669" width="350" height="350.00000000000006"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="TMZ-MR-vPS" secondAttribute="height" multiplier="1:1" id="cY6-zR-jO9"/>
+                                    <constraint firstAttribute="height" constant="350" id="ubx-LE-1Cy"/>
+                                    <constraint firstAttribute="width" constant="350" id="zFa-o2-QrS"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MovieMate" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOv-JG-feJ">
-                                <rect key="frame" x="120" y="588" width="153" height="34"/>
+                                <rect key="frame" x="120" y="621" width="153" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="30"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.0" green="0.003718701657" blue="0.016216378659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TMZ-MR-vPS" secondAttribute="bottom" constant="100" id="GdY-m9-rZ3"/>
-                            <constraint firstItem="TMZ-MR-vPS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Hbh-Mw-zWr"/>
-                            <constraint firstItem="TMZ-MR-vPS" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="aTI-id-NzN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TMZ-MR-vPS" secondAttribute="trailing" constant="30" id="sZK-45-dUo"/>
+                            <constraint firstItem="TMZ-MR-vPS" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="TWo-jb-bac"/>
+                            <constraint firstItem="TMZ-MR-vPS" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fjf-pD-RfD"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
         <image name="логотип" width="1024" height="1024"/>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
