--- a/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
+++ b/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
@@ -8,6 +8,21 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Seatch By WordsVC-->
+        <scene sceneID="uIb-2q-ERm">
+            <objects>
+                <viewController storyboardIdentifier="SeatchByWordsVC" id="GMF-tw-WcJ" customClass="SeatchByWordsVC" customModule="MovieMate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XLY-Yo-bnW">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="FAD-to-VEH"/>
+                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eq8-lZ-4eJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="505" y="-827"/>
+        </scene>
         <!--Movie Mate-->
         <scene sceneID="Uf4-zN-VqA">
             <objects>
@@ -19,7 +34,7 @@
                         <color key="separatorColor" systemColor="systemGray3Color"/>
                         <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="eBG-AC-w6W">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="nameButton" id="eBG-AC-w6W">
                                 <rect key="frame" x="20" y="38" width="353" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eBG-AC-w6W" id="BXU-46-HVF">
@@ -45,7 +60,7 @@
         <!--DetailVC-->
         <scene sceneID="Wmq-2r-s80">
             <objects>
-                <viewController id="uRp-ID-cpQ" customClass="DetailVC" customModule="MovieMate" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailVC" id="uRp-ID-cpQ" customClass="DetailVC" customModule="MovieMate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uHu-hR-zJm">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -105,83 +120,17 @@
             </objects>
             <point key="canvasLocation" x="-207" y="-156"/>
         </scene>
-        <!--Search By WordsVC-->
-        <scene sceneID="Vsj-t1-YUO">
-            <objects>
-                <viewController storyboardIdentifier="SearchByWordsVC" id="Tmm-nr-8Av" customClass="SearchByWordsVC" customModule="MovieMate" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XcY-gu-noc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gct-1i-SEv">
-                                <rect key="frame" x="16" y="79" width="361" height="34.333333333333343"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7z8-6h-Rsh">
-                                        <rect key="frame" x="0.0" y="0.0" width="277" height="34.333333333333336"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WxX-1g-5hn">
-                                        <rect key="frame" x="287" y="0.0" width="74" height="34.333333333333336"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="gray" title="Поиск"/>
-                                        <connections>
-                                            <action selector="seatchAction" destination="Tmm-nr-8Av" eventType="touchUpInside" id="Ygj-5M-FG4"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="SAK-dz-Zau">
-                                <rect key="frame" x="0.0" y="143.33333333333331" width="393" height="708.66666666666674"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="fh1-6s-V8E">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fh1-6s-V8E" id="Iw7-rV-miB">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="MIg-PT-f7V"/>
-                        <color key="backgroundColor" systemColor="systemCyanColor"/>
-                        <constraints>
-                            <constraint firstItem="SAK-dz-Zau" firstAttribute="trailing" secondItem="MIg-PT-f7V" secondAttribute="trailing" id="Aoy-Ki-UWL"/>
-                            <constraint firstAttribute="bottom" secondItem="SAK-dz-Zau" secondAttribute="bottom" id="FVW-4l-uEU"/>
-                            <constraint firstItem="SAK-dz-Zau" firstAttribute="leading" secondItem="MIg-PT-f7V" secondAttribute="leading" id="Tde-7M-Vqt"/>
-                            <constraint firstItem="SAK-dz-Zau" firstAttribute="top" secondItem="gct-1i-SEv" secondAttribute="bottom" constant="30" id="knA-rw-blj"/>
-                            <constraint firstItem="gct-1i-SEv" firstAttribute="leading" secondItem="MIg-PT-f7V" secondAttribute="leading" constant="16" id="tvK-IM-KVp"/>
-                            <constraint firstItem="MIg-PT-f7V" firstAttribute="trailing" secondItem="gct-1i-SEv" secondAttribute="trailing" constant="16" id="zUJ-An-OVk"/>
-                            <constraint firstItem="gct-1i-SEv" firstAttribute="top" secondItem="MIg-PT-f7V" secondAttribute="top" constant="20" id="zpB-Cd-MSk"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="sSg-0S-eGW"/>
-                    <connections>
-                        <outlet property="tableView" destination="SAK-dz-Zau" id="lKd-ui-vl5"/>
-                        <outlet property="textField" destination="7z8-6h-Rsh" id="eid-Jh-wES"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tZa-BY-NqI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="894" y="-829"/>
-        </scene>
     </scenes>
     <resources>
         <image name="изображение по умолчанию" width="600" height="600"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
