--- a/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
+++ b/MovieMate/MovieMate/Views/Base.lproj/Main.storyboard
@@ -87,6 +87,82 @@
             </objects>
             <point key="canvasLocation" x="700" y="-156"/>
         </scene>
+        <!--List Of The MovieTVC-->
+        <scene sceneID="B85-De-qft">
+            <objects>
+                <tableViewController storyboardIdentifier="ListOfTheMovieTVC" id="xEa-9i-lEb" customClass="ListOfTheMovieTVC" customModule="MovieMate" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="yr3-NJ-ZDI">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellList" rowHeight="165" id="FBQ-eM-70l">
+                                <rect key="frame" x="0.0" y="50" width="393" height="165"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FBQ-eM-70l" id="RFh-8Q-qXJ">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="165"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Gcg-cN-yyD">
+                                            <rect key="frame" x="10" y="10" width="373" height="145"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="изображение по умолчанию" translatesAutoresizingMaskIntoConstraints="NO" id="A3l-9D-vO0">
+                                                    <rect key="frame" x="0.0" y="0.0" width="145" height="145"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="A3l-9D-vO0" secondAttribute="height" multiplier="1:1" id="Bg0-Kt-DNu"/>
+                                                        <constraint firstAttribute="width" constant="145" id="p9d-LB-pJB"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="rWG-az-2g9">
+                                                    <rect key="frame" x="165" y="0.0" width="208" height="75.666666666666671"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название фильма" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tM6-bs-0kn">
+                                                            <rect key="frame" x="0.0" y="0.0" width="208" height="19.333333333333332"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7Fr-sq-KwC">
+                                                            <rect key="frame" x="0.0" y="39.333333333333329" width="208" height="36.333333333333329"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pVa-zJ-hMG">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="208" height="15.666666666666666"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Описание" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BKp-jv-qsN">
+                                                                    <rect key="frame" x="0.0" y="20.666666666666664" width="208" height="15.666666666666664"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Gcg-cN-yyD" firstAttribute="leading" secondItem="RFh-8Q-qXJ" secondAttribute="leading" constant="10" id="HmF-a9-g2i"/>
+                                        <constraint firstAttribute="trailing" secondItem="Gcg-cN-yyD" secondAttribute="trailing" constant="10" id="TrO-tw-9Ip"/>
+                                        <constraint firstItem="Gcg-cN-yyD" firstAttribute="top" secondItem="RFh-8Q-qXJ" secondAttribute="top" constant="10" id="l0J-xM-cso"/>
+                                        <constraint firstAttribute="bottom" secondItem="Gcg-cN-yyD" secondAttribute="bottom" constant="10" id="zvx-BJ-yq2"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="xEa-9i-lEb" id="O2k-HV-KQG"/>
+                            <outlet property="delegate" destination="xEa-9i-lEb" id="bKA-9j-jhQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7bs-aQ-YTW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1475.5725190839694" y="-156.33802816901408"/>
+        </scene>
         <!--DetailVC-->
         <scene sceneID="Wmq-2r-s80">
             <objects>
@@ -126,7 +202,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3mg-Z9-Acp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1529.0076335877861" y="-156.33802816901408"/>
+            <point key="canvasLocation" x="2193" y="-156"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ybf-l9-Ewa">
@@ -153,14 +229,17 @@
     </scenes>
     <resources>
         <image name="изображение по умолчанию" width="600" height="600"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
-            <color red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tintColor">
-            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
